# docmon

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  packages.yml
azure-stats/: Cargo.toml
azure-stats/src/: client.rs  config.rs  lib.rs  main.rs  publish.rs
azure-stats/src/stats/: collect.rs  emit.rs  mod.rs
contrib/: config.toml  docmon.service
contrib/debian/: README.Debian  changelog  control  copyright  debhelper-build-stamp  install  postinst  postrm  preinst  rules
docmon/: Cargo.toml
docmon/src/: config.rs  lib.rs  main.rs
docmon/src/stats/: collect.rs  emit.rs  mod.rs
docmond/: Cargo.toml
docmond/src/: main.rs
