[package]
name = "docmond"
description = "A daemon for sending a live stream of container(s) resource usage statistics to Azure Log Analytics"
version = "0.1.0"
authors = ["Denis Molokanov <dmolokanov@users.noreply.github.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bollard = "0.5"
tokio = { version = "0.2", default-features = false, features = ["macros", "rt-threaded", "signal"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.7"
clap = "2.33"
config = { version = "0.10", default-features = false, features = ["toml"] }
openssl = { version = "0.10", features = ["vendored"] }

docmon = { path = "../docmon" }
